# cricsynthsite

./: .env.example  .gitignore  CLAUDE.md  careers.html  contact.html  docs.html  email-footer.html  index.html  login.html  playground.html  privacy.html  pyproject.toml  railway.toml  registration_script.js  render.yaml  terms.html
cricketmind-ai/: .env.example  .gitignore  README.md  _debug_sc.py  _test_espn_api.py  _test_espn_explore.py  _test_integration.py  _test_sportmonks.py  requirements.txt
cricveda/: .env.example  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
cricveda-api/: Dockerfile  pyproject.toml  requirements-prod.txt
cricveda-api/src/cricveda_api/: auth.py  cache.py  deps.py  jwt_auth.py  main.py
cricveda-api/src/cricveda_api/routes/: keys.py  leaderboards.py  matches.py  matchups.py  oracle.py  players.py  predictions.py  teams.py  venues.py
cricveda-core/: pyproject.toml
cricveda-core/src/cricveda_core/domain/: models.py  scoring.py
cricveda-core/src/cricveda_core/dream_team/: optimizer.py
cricveda-core/src/cricveda_core/evaluation/: backtest.py
cricveda-core/src/cricveda_core/features/: matchup.py  pipeline.py  player_form.py  venue.py
cricveda-core/src/cricveda_core/models/: predict.py  train.py
cricveda-core/tests/unit/: test_scoring.py
cricveda-ingest/: pyproject.toml
cricveda-ingest/src/cricveda_ingest/: compute_fantasy.py  db.py  loader.py  name_mapper.py  scraper.py  validate.py
cricveda-web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
css/: docs.css  index.css  playground.css
docs/: CRICVEDA-BUILD-PROMPT.md  CricSynthesis-Project-Report.md  ENHANCED-CRICVEDA-PROMPT.md
(+197 files in other folders)
