[project]
name = "cricveda-core"
version = "0.1.0"
description = "CricVeda domain models, feature engineering, and ML prediction layer"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "pulp>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cricveda_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
