[project]
name = "cricveda-ingest"
version = "0.1.0"
description = "CricVeda data ingestion — Cricsheet loader, ESPNcricinfo scraper, name mapper"
requires-python = ">=3.12"
dependencies = [
    "cricveda-core",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.6",
    "supabase>=2.4",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cricveda_ingest"]
